--- a/.github/workflows/daily_schedule.yml
+++ b/.github/workflows/daily_schedule.yml
@@ -37,21 +37,23 @@ jobs:
             echo "Running Evening Cycle"
           fi
 
-      - name: Create Secrets File (Service Account)
-        run: |
-          cd PyDailyEmail
-          echo '${{ secrets.GOOGLE_CREDENTIALS }}' > service_account.json
-          # Debug check (safe)
-          ls -l service_account.json
-
       - name: Run Bot
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           EMAIL_ADDRESS: ${{ secrets.EMAIL_ADDRESS }}
-          EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
+          # Safe approach: Use Python to write the JSON file from Secret
+          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
         run: |
           cd PyDailyEmail
-          cd PyDailyEmail
-          # Update config.json with ENV vars is NA. We use os.environ now.
           
+          # 1. Reconstruct Service Account File safely
+          python -c "import os; open('service_account.json','w').write(os.environ['GOOGLE_CREDENTIALS'])"
+          
+          # 2. Debug (Check if file exists)
+          ls -l service_account.json
+          
+          # 3. Import Check
+          python -c "import backend.data_manager; print('Import OK')"
+          
+          # 4. Run Bot
           python run_bot.py --mode ${{ steps.mode.outputs.mode }}
