fix: Restore missing EMAIL_PASSWORD secret

--- a/.github/workflows/daily_schedule.yml
+++ b/.github/workflows/daily_schedule.yml
@@ -41,6 +41,7 @@ jobs:
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           EMAIL_ADDRESS: ${{ secrets.EMAIL_ADDRESS }}
+          EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
           # Safe approach: Use Python to write the JSON file from Secret
           GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
         run: |
