--- a/.github/workflows/daily_schedule.yml
+++ b/.github/workflows/daily_schedule.yml
@@ -7,8 +7,20 @@ on:
     # 1:00 PM IST = 7:30 AM UTC
     - cron: '30 7 * * *'
     # 9:00 PM IST = 3:30 PM UTC
+    # 9:00 PM IST = 3:30 PM UTC
     - cron: '30 15 * * *'
-  workflow_dispatch: # Allows manual trigger
+  workflow_dispatch:
+    inputs:
+      forced_mode:
+        description: 'Force a specific mode (leave empty for Auto)'
+        required: false
+        default: 'auto'
+        type: choice
+        options:
+        - auto
+        - morning
+        - motivation
+        - evening
 
 jobs:
   run-bot:
@@ -29,6 +41,14 @@ jobs:
       - name: Determine Mode
         id: mode
         run: |
+          # 1. Check if manually forced
+          if [ "${{ github.event.inputs.forced_mode }}" != "auto" ] && [ "${{ github.event.inputs.forced_mode }}" != "" ]; then
+             echo "mode=${{ github.event.inputs.forced_mode }}" >> $GITHUB_OUTPUT
+             echo "Manual Override: ${{ github.event.inputs.forced_mode }}"
+             exit 0
+          fi
+          
+          # 2. Auto Time-Based Logic
           HOUR=$(date -u +%H)
           if [ "$HOUR" -lt "05" ]; then
             echo "mode=morning" >> $GITHUB_OUTPUT
