--- a/.github/workflows/daily_scheduler.yml
+++ b/.github/workflows/daily_scheduler.yml
@@ -10,7 +10,18 @@ on:
     - cron: '0 12 * * *'
     # 4. Evening Cycle: 20:00 UTC
     - cron: '0 20 * * *'
-  workflow_dispatch: # Allows manual trigger from GitHub UI
+  workflow_dispatch:
+    inputs:
+      action:
+        description: 'Choose which cycle to run'
+        required: true
+        default: 'Morning Lessons'
+        type: choice
+        options:
+        - Morning Lessons
+        - Quiz Insights
+        - Motivation Boost
+        - Evening Reminders
 
 jobs:
   run-bot:
@@ -27,7 +38,7 @@ jobs:
         run: pip install -r requirements.txt
         
       - name: Run Morning Cycle (Lessons)
-        if: github.event.schedule == '0 8 * * *' || github.event_name == 'workflow_dispatch'
+        if: github.event.schedule == '0 8 * * *' || (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'Morning Lessons')
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
@@ -38,7 +49,7 @@ jobs:
         run: python run_bot.py --mode morning
 
       - name: Run Quiz Insights (AI Feedback)
-        if: github.event.schedule == '0 11 * * *'
+        if: github.event.schedule == '0 11 * * *' || (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'Quiz Insights')
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
@@ -49,7 +60,7 @@ jobs:
         run: python run_bot.py --mode insights
 
       - name: Run Mid-Day Motivation (Boost)
-        if: github.event.schedule == '0 12 * * *'
+        if: github.event.schedule == '0 12 * * *' || (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'Motivation Boost')
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
@@ -60,7 +71,7 @@ jobs:
         run: python run_bot.py --mode motivation
 
       - name: Run Evening Cycle (Reminders)
-        if: github.event.schedule == '0 20 * * *'
+        if: github.event.schedule == '0 20 * * *' || (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'Evening Reminders')
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
